# toucan

./: CMakeLists.txt  README.md  SuperBuild.bat  SuperBuild.sh  TimeLayout.cpp  TimelineItem.cpp  TimelineItem.h  TimelineWidget.cpp  WindowMenu.cpp  WindowModel.cpp  WindowModel.h  sbuild-macos.sh  sbuild-win.bat  toucanConfig.cmake.in
.github/workflows/: ci-workflow.yml
cmake/: FindOpenFX.cmake  Package.cmake
cmake/SuperBuild/: BuildFFmpeg.cmake  BuildFreetype.cmake  BuildImath.cmake  BuildJPEG.cmake  BuildOpenColorIO.cmake  BuildOpenEXR.cmake  BuildOpenFX.cmake  BuildOpenImageIO.cmake  BuildOpenTimelineIO.cmake  BuildPNG.cmake  BuildTIFF.cmake  BuildZLIB.cmake  Builddtk-deps.cmake  Builddtk.cmake  Buildexpat.cmake  Buildfeather-tk.cmake  Buildftk.cmake  Buildglfw3.cmake  Buildlunasvg.cmake  Buildminizip-ng.cmake  Buildnfd.cmake  Buildnlohmann_json.cmake  Buildpystring.cmake  Buildsvt-av1.cmake  Buildyaml-cpp.cmake  CMakeLists.txt
cmake/SuperBuild/OpenImageIO-patch/: ffmpeginput.cpp
cmake/SuperBuild/ZLIB-patch/: CMakeLists.txt
cmake/SuperBuild/svt-av1-patch/Source/Lib/: pkg-config.pc.in
data/: ColorSpace.otio  CompOver.otio  CompositeTracks.otio  Draw.otio  Filter.otio  Filters.otio  Gap.otio  Generator.otio  LinearTimeWarp.otio  Markers.otio  MissingMedia.otio  MissingMedia2.otio  MultipleEffects.otio  Patterns.otio  Render.otio  Sequence.otio  SimpleOver.otio  Text.otio  Transform.otio  Transforms.otio  Transition.otio  Transition2.otio  TransitionWipe.otio
images/: CompositeTracksGraph.dot  MultipleEffectsGraph.dot  Transition2Graph.dot  TransitionGraph.dot
lib/: CMakeLists.txt  ImageComp.cpp  ImageComp.h  ImageRead.cpp  ImageRead.h  toucan.cpp  toucan.h
lib/toucan/: Box.cpp  Box.h  BoxOp.cpp  BoxOp.h  CMakeLists.txt  Checkers.cpp  Checkers.h  CheckersImageOp.cpp  CheckersImageOp.h  CheckersOp.cpp  CheckersOp.h  CmdLine.cpp  ColorMap.cpp  ColorMap.h  ColorMapOp.cpp  ColorMapOp.h  ColorSpace.cpp  ColorSpace.h  Comp.cpp  Comp.h  CompImageOp.cpp  CompImageOp.h  CompOp.cpp  CompOp.h  Draw.cpp  Draw.h  FFmpeg.cpp  FFmpeg.h  FFmpegRead.cpp  FFmpegRead.h  FFmpegWrite.cpp  FFmpegWrite.h  Fill.cpp  Fill.h  FillImageOp.cpp  FillImageOp.h  FillOp.cpp  FillOp.h  Filter.cpp  Filter.h  (+116 more)
lib/toucanEdit/: App.cpp  App.h  BottomBar.cpp  BottomBar.h  CMakeLists.txt  Clip.cpp  Clip.h  ClipWidget.cpp  ClipWidget.h  Document.cpp  Document.h  DocumentTab.cpp  DocumentTab.h  DocumentsModel.h  Effects.cpp  Effects.h  Gap.cpp  Gap.h  GapWidget.cpp  GapWidget.h  IContainer.cpp  IContainer.h  IContainerInline.h  IItem.cpp  IItem.h  IItemWidget.cpp  IItemWidget.h  ImageGraph.cpp  ImageGraph.h  MediaReferences.cpp  MediaReferences.h  MenuBar.cpp  MenuBar.h  PlaybackModel.cpp  PlaybackModel.h  SelectionModel.cpp  SelectionModel.h  Stack.cpp  Stack.h  StackWidget.cpp  (+25 more)
lib/toucanRender/: CMakeLists.txt  Comp.cpp  Comp.h  FFmpeg.cpp  FFmpeg.h  FFmpegRead.cpp  FFmpegRead.h  FFmpegWrite.cpp  FFmpegWrite.h  ImageEffect.cpp  ImageEffect.h  ImageEffectHost.cpp  ImageEffectHost.h  ImageEffect_p.h  ImageGraph.cpp  ImageGraph.h  ImageNode.cpp  ImageNode.h  MemoryMap.h  MemoryMapUnix.cpp  MemoryMapWin32.cpp  OTIOZ.cpp  OTIOZ.h  Plugin.cpp  Plugin.h  PluginUnix.cpp  PluginWin32.cpp  Read.cpp  Read.h  TimeWarp.cpp  TimeWarp.h  TimelineAlgo.cpp  TimelineAlgo.h  TimelineWrapper.cpp  TimelineWrapper.h  Util.cpp  Util.h
lib/toucanResource/: CMakeLists.txt
lib/toucanUtil/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdLineInline.h  File.cpp  File.h  FileUnix.cpp  FileWin32.cpp  LRUCache.h  LRUCacheInline.h  Math.cpp  Math.h  MemoryMap.cpp  MemoryMap.h  MessageLog.cpp  String.cpp  String.h
lib/toucanView/: App.cpp  App.h  AudioClipItem.cpp  AudioClipItem.h  BackgroundTool.cpp  BackgroundTool.h  BottomBar.cpp  BottomBar.h  CMakeLists.txt  ClipItem.cpp  ClipItem.h  CompareMenu.cpp  CompareMenu.h  CompareTool.cpp  CompareTool.h  DetailsTool.cpp  DetailsTool.h  Document.cpp  Document.h  DocumentTab.cpp  DocumentTab.h  DocumentsModel.cpp  DocumentsModel.h  Export.h  ExportTool.cpp  ExportTool.h  File.cpp  File.h  FileMenu.cpp  FileMenu.h  FileTab.cpp  FileTab.h  FileToolBar.cpp  FileToolBar.h  FilesModel.cpp  FilesModel.h  GapItem.cpp  GapItem.h  GraphTool.cpp  GraphTool.h  (+76 more)
plugins/: CMakeLists.txt  ColorSpacePlugin.cpp  ColorSpacePlugin.h  DrawPlugin.cpp  DrawPlugin.h  FilterPlugin.cpp  FilterPlugin.h  GeneratorPlugin.cpp  GeneratorPlugin.h  InvertPlugin.cpp  InvertPlugin.h  Plugin.cpp  Plugin.h  TransformPlugin.cpp  TransformPlugin.h  TransitionPlugin.cpp  TransitionPlugin.h  Util.cpp  Util.h
tests/: CMakeLists.txt  CompImageOpTest.cpp  CompImageOpTest.h  CompOpTest.cpp  CompOpTest.h  CompTest.cpp  CompTest.h  ImageCompTest.cpp  ImageCompTest.h  ImageGraphTest.cpp  ImageGraphTest.h  ImageReadTest.cpp  ImageReadTest.h  PropertySetTest.cpp  PropertySetTest.h  ReadImageOpTest.cpp  ReadImageOpTest.h  ReadOpTest.cpp  ReadOpTest.h  ReadTest.cpp  ReadTest.h  TimelineGraphTest.cpp  TimelineGraphTest.h  TimelineTraverseTest.cpp  TimelineTraverseTest.h  UtilTest.cpp  main.cpp
tests/toucan-test/: CMakeLists.txt  main.cpp
tests/toucanEditTest/: CMakeLists.txt  StackTest.cpp  StackTest.h
tests/toucanRenderTest/: CMakeLists.txt  CompTest.cpp  ImageGraphTest.cpp  ImageGraphTest.h  PropertySetTest.cpp  PropertySetTest.h  ReadTest.cpp
tests/toucanTest/: CMakeLists.txt  CompTest.cpp  CompTest.h  ImageGraphTest.cpp  ImageGraphTest.h  PropertySetTest.cpp  ReadTest.cpp  ReadTest.h  UtilTest.cpp  UtilTest.h
tests/toucanUtilTest/: CMakeLists.txt  FileTest.cpp  FileTest.h
tests/toucanViewTest/: CMakeLists.txt  FilesModelTest.cpp  FilesModelTest.h  PlaybackModelTest.cpp  PlaybackModelTest.h  SelectionModelTest.cpp  SelectionModelTest.h  ViewModelTest.cpp  ViewModelTest.h  WindowModelTest.cpp  WindowModelTest.h
