set(HEADERS)
set(SOURCE)
set(RESOURCES
    images/toucan_64.svg)
foreach(RESOURCE ${RESOURCES})
    get_filename_component(RESOURCE_BASE ${RESOURCE} NAME_WE)
    add_custom_command(
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${RESOURCE_BASE}.cpp
        COMMAND $<TARGET_FILE:ftk::feather-tk-resource> ${CMAKE_SOURCE_DIR}/${RESOURCE} ${RESOURCE_BASE} toucan_resource
        DEPENDS ${CMAKE_SOURCE_DIR}/${RESOURCE})
    list(APPEND SOURCE ${CMAKE_CURRENT_BINARY_DIR}/${RESOURCE_BASE}.cpp)
endforeach()

add_library(toucanResource ${HEADERS} ${SOURCE})
target_link_libraries(toucanResource)
set_target_properties(toucanResource PROPERTIES FOLDER lib)
set_target_properties(toucanResource PROPERTIES PUBLIC_HEADER "${HEADERS}")

if(BUILD_SHARED_LIBS)
    install(
        TARGETS toucanResource
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION bin)
endif()
