set(HEADERS
    App.h
    ClipItem.h
    DetailsTool.h
    ExportTool.h
    FileTab.h
    File.h
    FilesModel.h
    GapItem.h
    GraphTool.h
    HUDWidget.h
    IItem.h
    IToolWidget.h
    InfoBar.h
    ItemLabel.h
    JSONTool.h
    LogTool.h
    MainWindow.h
    MarkerItem.h
    MenuBar.h
    PlaybackBar.h
    PlaybackModel.h
    SelectionModel.h
    StackItem.h
    ThumbnailGenerator.h
    TimeLayout.h
    TimeUnitsModel.h
    TimeWidgets.h
    TimelineItem.h
    TimelineWidget.h
    ToolBar.h
    TrackItem.h
    ViewModel.h
    Viewport.h
    WindowModel.h)

set(SOURCE
    App.cpp
    ClipItem.cpp
    DetailsTool.cpp
    ExportTool.cpp
    FileTab.cpp
    File.cpp
    FilesModel.cpp
    GapItem.cpp
    GraphTool.cpp
    HUDWidget.cpp
    IItem.cpp
    IToolWidget.cpp
    InfoBar.cpp
    ItemLabel.cpp
    JSONTool.cpp
    LogTool.cpp
    MainWindow.cpp
    MarkerItem.cpp
    MenuBar.cpp
    PlaybackBar.cpp
    PlaybackModel.cpp
    SelectionModel.cpp
    StackItem.cpp
    ThumbnailGenerator.cpp
    TimeLayout.cpp
    TimeUnitsModel.cpp
    TimeWidgets.cpp
    TimelineItem.cpp
    TimelineWidget.cpp
    ToolBar.cpp
    TrackItem.cpp
    ViewModel.cpp
    Viewport.cpp
    WindowModel.cpp)

add_library(toucanView ${HEADERS} ${SOURCE})
target_link_libraries(toucanView PUBLIC toucanRender dtk::dtkUI)
set_target_properties(toucanView PROPERTIES FOLDER lib)
add_dependencies(toucanView ${TOUCAN_PLUGINS})
