set(HEADERS
    App.h
    AudioClipItem.h
    BackgroundTool.h
    CompareMenu.h
    CompareTool.h
    DetailsTool.h
    ExportTool.h
    FileTab.h
    File.h
    FileMenu.h
    FileToolBar.h
    FilesModel.h
    GapItem.h
    GraphTool.h
    HUDWidget.h
    IItem.h
    IToolWidget.h
    InfoBar.h
    ItemLabel.h
    JSONTool.h
    LogTool.h
    MainWindow.h
    MarkerItem.h
    MenuBar.h
    PlaybackBar.h
    PlaybackMenu.h
    PlaybackModel.h
    SelectMenu.h
    SelectionModel.h
    StackItem.h
    ThumbnailGenerator.h
    ThumbnailsWidget.h
    TimeLayout.h
    TimeMenu.h
    TimeUnitsModel.h
    TimeWidgets.h
    TimelineItem.h
    TimelineWidget.h
    ToolBar.h
    TrackItem.h
    VideoClipItem.h
    ViewMenu.h
    ViewModel.h
    ViewToolBar.h
    Viewport.h
    WindowMenu.h
    WindowModel.h
    WindowToolBar.h)

set(SOURCE
    App.cpp
    AudioClipItem.cpp
    BackgroundTool.cpp
    CompareMenu.cpp
    CompareTool.cpp
    DetailsTool.cpp
    ExportTool.cpp
    FileTab.cpp
    File.cpp
    FileMenu.cpp
    FileToolBar.cpp
    FilesModel.cpp
    GapItem.cpp
    GraphTool.cpp
    HUDWidget.cpp
    IItem.cpp
    IToolWidget.cpp
    InfoBar.cpp
    ItemLabel.cpp
    JSONTool.cpp
    LogTool.cpp
    MainWindow.cpp
    MarkerItem.cpp
    MenuBar.cpp
    PlaybackBar.cpp
    PlaybackMenu.cpp
    PlaybackModel.cpp
    SelectMenu.cpp
    SelectionModel.cpp
    StackItem.cpp
    ThumbnailGenerator.cpp
    ThumbnailsWidget.cpp
    TimeMenu.cpp
    TimeLayout.cpp
    TimeUnitsModel.cpp
    TimeWidgets.cpp
    TimelineItem.cpp
    TimelineWidget.cpp
    ToolBar.cpp
    TrackItem.cpp
    VideoClipItem.cpp
    ViewMenu.cpp
    ViewModel.cpp
    ViewToolBar.cpp
    Viewport.cpp
    WindowMenu.cpp
    WindowModel.cpp
    WindowToolBar.cpp)

add_library(toucanView ${HEADERS} ${SOURCE})
target_link_libraries(toucanView PUBLIC toucanRender feather-tk::feather-tk-ui)
set_target_properties(toucanView PROPERTIES FOLDER lib)
add_dependencies(toucanView ${TOUCAN_PLUGINS})
